# imputax

./: README.md  ppca_exact_em.md  pyproject.toml
doc/: factor_model_em.md  ppca_exact_em.md
imputax/: __init__.py  factor_model.py  pca.py  ppca.py
jax_impute/: __init__.py  factor_model.py  pca.py  ppca.py  utils.py
test/: test_imputers.py
