[build-system]
requires = ["setuptools >= 61.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["jax-imputer"]

[project]
name = "jax-imputer"
description = "Missing value imputation by Bayesian models implemented by Jax."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Kei Ishikawa"},
    {email = "k.stoneriv@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.1",
    "jax>=0.4.8",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "isort",
    "black[jupyter]",
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-sugar",
]

[tool.setuptools.dynamic]
version = {attr = "jax_impute.version.__version__"}

[tool.black]
line-length = 100
target-version = ["py310"]
src_paths = ["jax_impute", "tests", "examples"]
 
[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100

[tool.ruff.per-file-ignores]
# "__init__.py" = ["F401"]



[tool.mypy]
files = ["jax_impute", "tests"]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
strict_equality = true
strict_concatenate = true
no_implicit_reexport = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = [
    "confounding_robust_inference.estimators.baselines",
    "confounding_robust_inference.estimators.constraints",
    "confounding_robust_inference.estimators.kcmc",
    "confounding_robust_inference.estimators.misc"
]
disable_error_code = [
    "attr-defined",
    "name-defined"
]  # due to cvxpy not setting __all__ in __init__.py
