[build-system]
requires = ["setuptools >= 61.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["imputax"]

[project]
name = "Imputax"
description = "Missing value imputation algoirithms implemented with Jax."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Kei Ishikawa"},
    {email = "k.stoneriv@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.1",
    "jax>=0.4.8",
    "jaxtyping",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "isort",
    "black[jupyter]",
    "beartype",
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-sugar",
]

[tool.setuptools.dynamic]
version = {attr = "imputax.version.__version__"}

[tool.black]
line-length = 100
target-version = ["py310"]
src_paths = ["imputax", "test", "example"]
 
[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
ignore = ["F722"]  # for jaxtyping
ignore-init-module-imports = true


[tool.ruff.per-file-ignores]
# "__init__.py" = ["F401"]



[tool.mypy]
files = ["imputax", "test"]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
strict_equality = true
strict_concatenate = true
no_implicit_reexport = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test"]
ddopts = "--jaxtyping-packages=imputax,beartype.beartype(conf=beartype.BeartypeConf(strategy=beartype.BeartypeStrategy.On))"
